packages/react-components/src/components/modal/content/modal-content.module.css
@import '../../../core/utils/media.css';

@layer components {
  .Content {
    inline-size: 100vw;
    -webkit-overflow-scrolling: touch;
    max-block-size: 95vh;
    max-block-size: 95dvh;
    border-radius: token(--radius-24) token(--radius-24) 0 0;
    justify-self: center;
    align-self: end;
    padding-block-end: env(safe-area-inset-bottom);

    @media (--from-small) {
      max-inline-size: 600px;
      max-block-size: 80vh;
      max-block-size: 80dvh;
      border-radius: token(--radius-24);
      justify-self: center;
      align-self: center;
    }
  }

  .Scroller {
    overflow: hidden;
    overscroll-behavior: contain;

    &[data-modal-content-scroll='true'] {
      overflow: auto;
    }
  }

  .Header {
    flex-shrink: 0;
    height: token(--space-56);
    overflow: hidden;
    border-radius: token(--radius-24) token(--radius-24) 0 0;
    background-color: var(--header-tint);
    position: relative;
    padding:
      token(--space-16)
      token(--space-80)
      token(--space-16)
      token(--space-24);
  }

  .CloseButton {
    position: absolute;
    top: token(--space-8);
    right: token(--space-8);
  }
}

